Esercizi e Laboratori/Esercizi e Laboratori/2017 - 2018/WorkSpaceEclipseEsercizi/.metadata/.plugins/org.eclipse.cdt.ui/s10es1_.build.log
22:02:30 **** Incremental Build of configuration Debug for project s10es1_ ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\s10es1_.o" "..\\src\\s10es1_.cpp" 
..\src\s10es1_.cpp: In function 'int main()':
..\src\s10es1_.cpp:22:2: error: 'cout' was not declared in this scope
  cout<<"start"<<endl;
  ^~~~
..\src\s10es1_.cpp:22:2: note: suggested alternative:
In file included from ..\src\s10es1_.cpp:1:0:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:61:18: note:   'std::cout'
   extern ostream cout;  /// Linked to standard output
                  ^~~~
..\src\s10es1_.cpp:22:17: error: 'endl' was not declared in this scope
  cout<<"start"<<endl;
                 ^~~~
..\src\s10es1_.cpp:22:17: note: suggested alternative:
In file included from c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:39:0,
                 from ..\src\s10es1_.cpp:1:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\ostream:590:5: note:   'std::endl'
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^~~~
..\src\s10es1_.cpp:23:2: error: 'cin' was not declared in this scope
  cin>> c;
  ^~~
..\src\s10es1_.cpp:23:2: note: suggested alternative:
In file included from ..\src\s10es1_.cpp:1:0:
c:\mingw\lib\gcc\mingw32\6.3.0\include\c++\iostream:60:18: note:   'std::cin'
   extern istream cin;  /// Linked to standard input
                  ^~~
..\src\s10es1_.cpp:28:2: error: 'cou' was not declared in this scope
  cou<<"end"<<endl;
  ^~~

22:02:30 Build Finished (took 373ms)

